# machine-ddt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
application/: auto_shoot.py  retire_exp.py
dl_script/: __init__.py
doc/: manual-zh-cn.md
example/: open_bag.py  retire_exp.py
machine_ddt/: __init__.py  builtin_action.py  builtin_observation.py  data.py  event.py  handle.py  key_map.py  logger.py  observe_method.py  observer.py  shoot.py
machine_ddt/builtin_action/: __init__.py  abstract.py  challenge_room_setting_action.py  in_arena_hall.py  in_challenge_room.py  in_entry.py  in_game.py  in_room.py  room_to_game.py
machine_ddt/builtin_observation/: __init__.py  abstract.py  in_arena_hall.py  in_challenge_room.py  in_entry.py  in_game.py  in_room.py
machine_ddt/context/: __init__.py  player.py
static/ddt/config/event/: in_game_event.yml  in_room_event.yml
